# Nmap Changelog ($Id$); -*-text-*-

o [GH#284] Fix retrieval of route netmasks on FreeBSD. IPv6 routes were given
  /32 netmasks regardless of actual netmask configured, resulting in failed
  routing. Reported by Martin Gysi. [Daniel Miller]

o Use the same ScanProgressMeter for FTP bounce scan (-b) as for the other scan
  types, allowing periodic status updates with --stats-every or keypress
  events.  [Daniel Miller]

o [GH#274] Use a shorter pcap_select timeout on OpenBSD, just as we do for OS
  X, old FreeBSD, and Solaris, which use BPF for packet capture and do not have
  properly select-able fds. Fix by OpenBSD port maintainer [David Carlier]

o [NSE] Added ms-sql-ntlm-info for extracting OS version and sometimes hostname
  from MS SQL Server instances via the NTLM challenge message. [Justin Cacak]

o [NSE] Added nntp-ntlm-info for extracting hostname and sometimes OS version
  from NTLM-auth-enabled NNTP services. [Justin Cacak]

o [NSE] Added pop3-ntlm-info for extracting hostname and sometimes OS version
  from NTLM-auth-enabled POP3 services. [Justin Cacak]

o [NSE] Added telnet-ntlm-info for extracting hostname and sometimes OS version
  from NTLM-auth-enabled Telnet services. [Justin Cacak]

o [NSE] Added smtp-ntlm-info for extracting hostname and sometimes OS version
  from NTLM-auth-enabled SMTP and submission services. [Justin Cacak]

o [NSE] Added imap-ntlm-info for extracting hostname and sometimes OS version
  from NTLM-auth-enabled IMAP services. [Justin Cacak]

o [NSE] Added http-vuln-cve2013-6786 for detecting a XSS and URL redirection
  vulnerability in Allegro RomPager web server. Also added a fingerprint for
  detecting CVE-2014-4019 to http-fingerprints.lua. [Vlatko Kosturjak]

o [GH#265] When provided a verbosity of 0 (-v0), Nmap will not output any text to the
  screen. This happens at the time of argument parsing, so the usual meaning of
  "verbosity 0" is preserved. [isjing]
